# vara-dapp-patterns

./: .gitignore  README.md
contracts/delayed-self-message/: Cargo.toml  README.md  build.rs
contracts/delayed-self-message/app/: Cargo.toml
contracts/delayed-self-message/app/src/: lib.rs
contracts/delayed-self-message/client/: Cargo.toml  build.rs  delayed_self_message_client.idl
contracts/delayed-self-message/client/src/: delayed_self_message_client.rs  lib.rs
contracts/delayed-self-message/src/: lib.rs
contracts/delayed-self-message/tests/: gtest.rs
contracts/factory/: Cargo.toml  README.md  build.rs
contracts/factory-child/: Cargo.toml  README.md  build.rs
contracts/factory-child/app/: Cargo.toml
contracts/factory-child/app/src/: lib.rs
contracts/factory-child/client/: Cargo.toml  build.rs
contracts/factory-child/client/src/: lib.rs
contracts/factory-child/src/: lib.rs
contracts/factory-child/tests/: gtest.rs
contracts/factory/app/: Cargo.toml
contracts/factory/app/src/: lib.rs
contracts/factory/client/: Cargo.toml  build.rs  factory_client.idl
contracts/factory/client/src/: factory_client.rs  lib.rs
contracts/factory/src/: lib.rs
contracts/factory/tests/: gtest.rs
contracts/module-toggles/oracle/: Cargo.toml  README.md
contracts/module-toggles/oracle-admin-wrapper/: Cargo.toml  README.md  build.rs
contracts/module-toggles/oracle-admin-wrapper/app/: Cargo.toml
contracts/module-toggles/oracle-admin-wrapper/app/src/: lib.rs
contracts/module-toggles/oracle-admin-wrapper/app/src/services/: mod.rs
contracts/module-toggles/oracle-admin-wrapper/app/src/services/admin/: mod.rs
contracts/module-toggles/oracle-admin-wrapper/app/src/services/market/: mod.rs
contracts/module-toggles/oracle-admin-wrapper/client/: Cargo.toml  build.rs  oracle_admin_wrapper_client.idl
contracts/module-toggles/oracle-admin-wrapper/client/src/: lib.rs  oracle_admin_wrapper_client.rs
contracts/module-toggles/oracle-admin-wrapper/src/: lib.rs
contracts/module-toggles/oracle-admin-wrapper/tests/: gtest.rs
contracts/module-toggles/oracle/src/: lib.rs
contracts/signless-gasless/: .gitignore  Cargo.toml  README.md  build.rs
contracts/signless-gasless/app/: Cargo.toml
contracts/signless-gasless/app/src/: lib.rs
contracts/signless-gasless/client/: Cargo.toml  build.rs  signless_gasless_client.idl
contracts/signless-gasless/client/src/: lib.rs  signless_gasless_client.rs
contracts/signless-gasless/src/: lib.rs
contracts/signless-gasless/tests/: gtest.rs
frontend/: README.md
frontend/patterns/ez-transactions/: README.md
frontend/patterns/ez-transactions/examples/: SwitchSignless.tsx  withProviders.tsx
frontend/patterns/ez-transactions/hooks/: use-check-balance.ts  use-sign-and-send.ts
frontend/patterns/hooks/prepare-program-tx/: README.md  usePrepareProgramTx.ts
frontend/patterns/hooks/prepare-program-tx/examples/: usePrepareProgramTx.ts
frontend/patterns/hooks/program-tx-mutation/: README.md  types.ts  useProgramTxMutation.ts
frontend/patterns/hooks/program-tx-mutation/examples/: README.md  useVftTransferFromMessagePrepareSignAndSend.ts  useVftTransferMessagePrepare.ts  useVftTransferMutation.ts
frontend/patterns/hooks/verified-sign-and-send/: README.md  useVerifiedSignAndSend.ts
frontend/patterns/hooks/verified-sign-and-send/examples/: VftTransfer.tsx
frontend/patterns/providers/: README.md
frontend/patterns/providers/query-provider/: QueryProvider.tsx  README.md
frontend/patterns/providers/with-providers/: README.md  defaults.ts  withProviders.tsx
frontend/shared/constants/: gas.ts
frontend/shared/errors/: getErrorMessage.ts
infrastructure/gasless-server/: .env.txt  README.md  package.json
infrastructure/gasless-server/src/: index.ts  lib.ts
infrastructure/gateway/: .env.example  README.md  package.json
infrastructure/gateway/src/: index.ts
infrastructure/gateway/src/config/: constants.ts
infrastructure/gateway/src/controllers/: contract.controller.ts
infrastructure/gateway/src/middleware/: auth.middleware.ts
infrastructure/gateway/src/routes/: contract.routes.ts
infrastructure/gateway/src/services/: contract.service.ts
infrastructure/gateway/src/utils/: vara.utils.ts
infrastructure/token-gate-server/: .env.txt  README.md  package.json
infrastructure/token-gate-server/src/: auth.ts  gear.ts  server.ts  vft.ts
