[package]
name = "oracle-admin-wrapper-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs = "0.10.2"
oracle = {path = "../../oracle"}

